@@ -4,5 +4,11 @@
            > 
   
   <include file="form/overrides.zcml" />
-    
+
+  <adapter
+      factory=".ISO15Charset"
+      for="zope.publisher.interfaces.http.IHTTPRequest"
+      provides="zope.i18n.interfaces.IUserPreferredCharsets"
+      />
+
 </configure>
